Added Nav bar and Added About page for Drum-Kit Project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="navbar-left">
+      <h1>🥁 Drum Kit</h1>
+    </div>
+    <div class="navbar-right">
+      <a href="about.html" class="about-link">About</a>
+    </div>
+  </nav>
 
   <div class="keys">
     <div data-key="65" class="key">
